<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_category_general"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="pref_dark_mode"
            app:title="@string/pref_dark_mode_title"
            app:summary="@string/pref_dark_mode_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_privacy"
        app:iconSpaceReserved="false">

        <Preference
            app:key="pref_clear_cache"
            app:title="@string/pref_clear_cache_title"
            app:summary="@string/pref_clear_cache_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_about"
        app:iconSpaceReserved="false">

        <Preference
            app:key="pref_about"
            app:title="@string/pref_about_title"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="pref_version"
            app:title="@string/pref_version_title"
            app:summary="1.0.0"
            app:iconSpaceReserved="false"
            app:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
